<resources>
    <string name="app_name">Mappe1</string>
    <string name="tittel">QuickMaths</string>
    <string name="button_1">Start Spill</string>
    <string name="button_2">Om Spillet</string>
    <string name="button_3">Preferanser</string>

    <string name="tilbake">Tilbake:</string>

    <string name="omspill">Om Spillet:</string>
    <string name="omspillinfo">Liker du matte og vil teste ut dine ferdigheter! På QuickMaths så handler spillet om å teste ut dine matte skills for å øve på å addere. Matte kan være vanskelig for noen, men det burde ikke være det, dette klarer du! Masse lykke til :)</string>

    <string name="pref">Preferanser:</string>
    <string name="bytt">Bytt språk:</string>
    <string name="norsk">Bytt til norsk:</string>
    <string name="tysk">Bytt til tysk:</string>

    <string name="velg_antall">Velg antall regnestykker:</string>
    <string name="regn5">5</string>
    <string name="regn10">10</string>
    <string name="regn15">15</string>



    <string name="safeguard">Er du sikker på at du vil gå tilbake?</string>
    <string name="spillsvarHint">Svar:</string>
    <string name="spørsmålTxt">Spørsmål</string>
    <string name="ferdigAlert">Spillet er ferdig, vil du gå tilbake eller prøve en runde til?</string>
    <string name="sjekksvarknapp">Sjekk svar</string>
    <string name="enTil">EN TIL!</string>
    <string name="jaAlert">Ja</string>
    <string name="neiAlert">Nei</string>
    <string name="tilbakemeldingdel1">"Det var dessverre feil, her er et lite hint: Hvis Daniel har "</string>
    <string name="tilbakemeldingdel2">" epler og Erik har "</string>
    <string name="tilbakemeldingdel3">" epler, hvor mye har de til sammen da?"</string>
    <string name="riktigSvar">Riktig, bra jobbet ;)</string>
    <string name="dataLagret">DATA LAGRET</string>


</resources>