<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakgrunn"
    tools:context=".Preferanser">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="414dp"
        android:layout_height="117dp"
        android:layout_marginTop="112dp"
        android:text="@string/pref"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/byttSprokButton"
        android:layout_width="303dp"
        android:layout_height="214dp"
        android:layout_marginTop="272dp"
        android:fontFamily="casual"
        android:text="@string/bytt"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/antallButton"
        android:layout_width="324dp"
        android:layout_height="222dp"
        android:layout_marginTop="508dp"
        android:fontFamily="casual"
        android:text="@string/velg_antall"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>