<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakgrunn"
    tools:context=".Preferanser">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="395dp"
        android:layout_height="58dp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_marginTop="112dp"
        android:text="@string/bytt"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/norsk"
        android:layout_width="399dp"
        android:layout_height="180dp"
        android:layout_marginTop="252dp"
        android:fontFamily="casual"
        android:text="@string/norsk"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tysk"
        android:layout_width="399dp"
        android:layout_height="180dp"
        android:layout_marginTop="496dp"
        android:fontFamily="casual"
        android:text="@string/tysk"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>