<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakgrunn"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="367dp"
        android:layout_height="163dp"
        android:layout_alignParentBottom="true"
        android:fontFamily="casual"
        android:rotationX="0"
        android:text="@string/velg_antall"
        android:textAlignment="center"
        android:textFontWeight="1000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/tall5"
        android:layout_width="260dp"
        android:layout_height="180dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="casual"
        android:text="@string/regn5"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <Button
        android:id="@+id/tall10"
        android:layout_width="260dp"
        android:layout_height="180dp"
        android:fontFamily="casual"
        android:text="@string/regn10"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <Button
        android:id="@+id/tall15"
        android:layout_width="260dp"
        android:layout_height="180dp"
        android:fontFamily="casual"
        android:text="@string/regn15"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919"
        tools:ignore="DuplicateIds" />

</androidx.constraintlayout.widget.ConstraintLayout>