<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakgrunn"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="289dp"
        android:layout_height="170dp"
        android:layout_marginTop="56dp"
        android:rotation="-4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="236dp"
        android:layout_height="89dp"
        android:layout_alignParentBottom="true"
        android:fontFamily="casual"
        android:rotationX="10"
        android:text="@string/tittel"
        android:textAlignment="center"
        android:textFontWeight="20"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <Button
        android:id="@+id/StartSpill"
        android:layout_width="260dp"
        android:layout_height="170dp"
        android:layout_marginBottom="440dp"
        android:fontFamily="casual"
        android:text="@string/button_1"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Pref"
        android:layout_width="260dp"
        android:layout_height="170dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="casual"
        android:text="@string/button_3"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/OmSpill"
        android:layout_width="260dp"
        android:layout_height="170dp"
        android:layout_marginBottom="240dp"
        android:fontFamily="casual"
        android:text="@string/button_2"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>